# ota

./: .gitignore  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  LICENSE  MULTI_AGENT_DEVELOPMENT_PROMPT.md  OTA_OPTIMIZATION_PLAN.md  README.md  connectivity.py  delta.py  delta_gen.py  integration_test.py  main.py  manifest.json  manifest_gen.py  ota.py  ota_client.py  ota_config.json  ota_updater.py  pyproject.toml  update_scheduler.py
.claude/: settings.local.json
.claude/agents/: micropython-iot-developer.md
.github/workflows/: release-manifest.yml
tests/: test_config_validation.py  test_delta_streaming.py  test_error.py  test_force.py  test_format_version.py  test_get_json.py  test_hash.py  test_load_config.py  test_manifest_sig.py  test_path_filtering.py  test_path_sanity.py  test_resolve.py  test_resources.py  test_rollback_atomicity.py  test_staging.py  test_startup.py  test_startup_client.py  test_stream.py  test_swap.py  test_timeout.py  test_tree_limits.py  test_tree_size.py  test_tree_size_validation.py  test_verify.py  test_version_json_timing.py  test_version_timing.py
